compiler/lib/test/parser_golden/module_actor_before_import.golden
ERROR: test.act:3:1:
  |
3 | import math
  | ^
unexpected 'i'
expecting "@static", "@staticmethod", "action", "actor", "class", "def", "extension", "mut", "proc", "protocol", "pure", '_', end of input, end of line, or statement
